--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.518.0",
     "react": "^19.0.0",
+    "react-activation": "^0.13.4",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
