--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
@@ -21,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
