--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
